# legal_guardian

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
agents/: lender_agent.py
backend/: Dockerfile  app.py  inference.py  requirements.txt  tasks.py
backend/agents/: ai_lawyer.py
backend/db/: log_repo.py
backend/environment/: debt_env.py  rbi_context.py  scenario_generator.py
backend/models/: schemas.py
backend/tmp/: test_analyze.py
db/: connection.py  session_repo.py
environment/: reward_engine.py  state_manager.py
legal-guardian-ai-main/src/: index.css
legal-guardian-ai-main/src/components/dashboard/: AIDecisionPanel.tsx  DashboardHeader.tsx  EnvironmentStatePanel.tsx  LenderResponsePanel.tsx  MiniCharts.tsx  RegulatoryDialog.tsx  RewardPanel.tsx  TimelinePanel.tsx  UserInputPanel.tsx
legal-guardian-ai-main/src/pages/: Index.tsx
server/: app.py
tmp/: verify_graders.py
utils/: report.py
